--- a/source/_posts/2019-11-23-use-mat.md
+++ b/source/_posts/2019-11-23-use-mat.md
@@ -15,7 +15,7 @@ tags:
 ![](http://qiniu.aimiter.com/myblog/metadata2.jpg)
 
 ### 为什么要清除元数据？
-因为元数据包含时间，地点等个人敏感隐私数据。网上不乏有黑客通过社交照片的元数据信息追踪到用户地址，从而进行骚扰勒索等危险行动。
+因为元数据包含时间，地点等个人敏感隐私数据。网上不乏有黑客通过社交照片的元数据信息追踪到用户地址，从而进行骚扰勒索等危险行动。包括此文中的博客, 上传图床前已经过脱敏处理.
 ## 安装
 ```bash 
 # 安装
