--- a/source/_posts/2020-03-11-科学上网-巧用镜像站.md
+++ b/source/_posts/2020-03-11-科学上网-巧用镜像站.md
@@ -16,4 +16,4 @@ tags:
 
 [清华大学开源软件镜像站](https://mirror.tuna.tsinghua.edu.cn/)
 
-这几个镜像站真香啊， 包括了很多开源镜像， 包括Elasticsearch， Android SDK等， 这部分阔以免去翻墙打洞的烦恼啦。
+这几个镜像站真香啊， 包括了很多开源镜像， 包括Elasticsearch， Android SDK，OS镜像，网络授时NTP等， 这部分阔以免去翻墙打洞的烦恼啦。
