--- a/source/_posts/2017-06-10-Linux常用环境变量.md
+++ b/source/_posts/2017-06-10-Linux常用环境变量.md
@@ -38,5 +38,7 @@ alias datagrip='/opt/datagrip/bin/datagrip.sh'
 alias pycham='/opt/pycharm/bin/pycharm.sh'
 alias idea='/opt/idea/bin/idea.sh'
 alias webstorm='/opt/pycharm/bin/webstorm.sh'
-
+alias postman='/opt/justmd/justmd'
+alias justmd='/opt/Postman/app/Postman'
+alias robo3t='/opt/robo3t/bin/robo3t'
 ```
