--- a/source/_posts/2020-03-11-科学上网-巧用镜像站.md
+++ b/source/_posts/2020-03-11-科学上网-巧用镜像站.md
@@ -18,3 +18,14 @@ tags:
 [清华大学开源软件镜像站](https://mirror.tuna.tsinghua.edu.cn/)
 
 这几个镜像站真香啊， 包括了很多开源镜像， 包括Elasticsearch， Android SDK，OS镜像，网络授时NTP等， 这部分阔以免去翻墙打洞的烦恼啦。
+
+## pip 镜像加速
+```
+--index-url=http://mirrors.aliyun.com/pypi/simple/ --trusted-host=mirrors.aliyun.com
+```
+
+## npm 加速
+```
+npm install -g cnpm --registry=https://registry.npm.taobao.org
+npm config set registry https://registry.npm.taobao.org
+```
