--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -14,3 +14,22 @@ tags:
     export LANG=en_US
     xdg-user-dirs-gtk-update
     export LANG=zh_CN
+
+```bash
+sudo apt update
+sudo apt upgrade
+
+sudo apt install -y git;
+sudo apt install -y vim;
+sudo apt install -y htop;
+sudo apt install -y tree;
+sudo apt install -y curl;
+sudo apt install -y whois;
+sudo apt install -y python3-distutils ;
+sudo apt-get install -y libmysqlclient-dev;
+sudo apt install  -y python3-pip;
+sudo apt install -y virtualenv;
+sudo apt install -y nginx;
+sudo apt install -y supervisor;
+sudo apt install -y goldendict ;
+```
