--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -15,6 +15,42 @@ tags:
     xdg-user-dirs-gtk-update
     export LANG=zh_CN
 
+## 环境变量
+
+```bash
+# node env
+export PATH=$PATH:/opt/node/bin
+
+# env jdk
+JAVA_HOME=/opt/jdk
+CLASSPATH=.:$JAVA_HOME/lib.tools.jar
+PATH=$JAVA_HOME/bin:$PATH
+export JAVA_HOME CLASSPATH PATH
+
+# RUST env
+export PATH="$HOME/.cargo/bin:$PATH"
+
+# android env
+export ANDROID_HOME=$HOME/Android/Sdk
+export PATH=$PATH:$ANDROID_HOME/tools
+export PATH=$PATH:$ANDROID_HOME/tools/bin
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+export PATH=$PATH:$ANDROID_HOME/emulator
+
+alias datagrip='/opt/Datagrip/bin/datagrip.sh'
+alias pycham='/opt/pycharm/bin/pycharm.sh'
+alias idea='/opt/idea/bin/idea.sh'
+alias webstorm='/opt/pycharm/bin/webstorm.sh'
+alias spoon='sh /opt/di/spoon.sh'
+alias elasticsearch='/opt/elasticsearch/bin/elasticsearch'
+alias kibana='/opt/kibana/bin/kibana'
+
+```
+
+## 软件
+
+### 常用工具
+
 ```bash
 sudo apt update
 sudo apt upgrade
@@ -24,6 +60,7 @@ sudo apt install -y vim;
 sudo apt install -y htop;
 sudo apt install -y tree;
 sudo apt install -y curl;
+sudo apt install -y aria2;
 sudo apt install -y whois;
 sudo apt install -y python3-distutils ;
 sudo apt-get install -y libmysqlclient-dev;
@@ -31,5 +68,47 @@ sudo apt install  -y python3-pip;
 sudo apt install -y virtualenv;
 sudo apt install -y nginx;
 sudo apt install -y supervisor;
-sudo apt install -y goldendict ;
+# 功能强大的词典， 需要配置第三方词典资源
+sudo apt install -y goldendict;
+# 文本版本差异对比，合并工具 可视化的diff和merge 工具
+sudo apt install -y meld;
+# 开源多媒体播放器， 感觉比VLC稳定。
+sudo apt install -y mplayer;
+sudo apt install -y qbittorrent;
+
 ```
+### 实用工具
+**DBeaver**
+  通用数据库管理
+
+**KRDC**  
+  好用的远程桌面客户端
+
+**GIMP**  
+  功能强大的图像处理和绘画软件
+  
+**Syncthing**
+  多台设备双向文件同步工具
+
+**VirtualBox**
+  虚拟机
+
+**Motrix**
+多功能下载器 
+特性： Async DNS BitTorrent Firefox3 Cookie GZip HTTPS Message Digest Metalink XML-RPC SFTP
+
+**永中Office**
+
+
+### 趣味软件
+
+**sonic-pi**  
+  通过编码的音乐合成器
+
+
+
+
+
+
+
+
