--- a/source/_posts/2019-12-29-浏览器常用扩展.md
+++ b/source/_posts/2019-12-29-浏览器常用扩展.md
@@ -5,6 +5,7 @@ update:  2019-12-29 22:00:00
 author: 小云吞
 categories: tools
 tags: 
+ - 科学上网
  - tools
  - browser
 ---
@@ -16,3 +17,6 @@ tags:
 |EditThisCookie|Cookie 管理|
 |QR Code Generator|QR Code|
 |Tampermonkey|用户脚本管理器 [greasyfork](https://greasyfork.org/zh-CN)|
+|SwitchyOmega|代理设置工具|
+|Vimum|使用vim键位操作浏览器|
+|Video Download Professional|媒体下载工具|
