--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -75,9 +75,20 @@ sudo apt install -y meld;
 # 开源多媒体播放器， 感觉比VLC稳定。
 sudo apt install -y mplayer;
 sudo apt install -y qbittorrent;
-
+# 密码管理器
+sudo apt install -y keepassxc;
+# 深度截图，功能强大。 配合系统默认的带有延时截图的screenshot更佳。
+sudo apt install -y deepin-screenshot;
+# 深度桌面取色器
+sudo apt install -y deepin-picker;
+sudo apt install -y deepin-terminal;
 ```
 ### 实用工具
+**Visual Studio Code**
+
+**CherryTree**
+  功能强大的树形笔记工具
+
 **DBeaver**
   通用数据库管理
 
