--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -27,6 +27,22 @@ CLASSPATH=.:$JAVA_HOME/lib.tools.jar
 PATH=$JAVA_HOME/bin:$PATH
 export JAVA_HOME CLASSPATH PATH
 
+# redis env
+export REDIS_HOME=/opt/redis
+export PATH=$PATH:$REDIS_HOME/src
+
+# hadoop 3.1.1 env
+export HADOOP_HOME=/opt/hadoop-3.1.1
+export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
+
+# hadoop 2.8.5 env
+#export HADOOP_HOME=/opt/hadoop-2.8.5
+#export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
+
+# hbase env
+export HBASE_HOME=/opt/hbase-2.1.1
+export PATH=$PATH:$HBASE_HOME/bin
+
 # RUST env
 export PATH="$HOME/.cargo/bin:$PATH"
 
@@ -44,6 +60,9 @@ alias webstorm='/opt/pycharm/bin/webstorm.sh'
 alias spoon='sh /opt/di/spoon.sh'
 alias elasticsearch='/opt/elasticsearch/bin/elasticsearch'
 alias kibana='/opt/kibana/bin/kibana'
+alias spoon='cd /opt/data-integration/ && ./spoon.sh'
+alias robo3t='cd /opt/robo3t/bin/ && ./robo3t &'
+alias justmd='cd /opt/justmd/ && ./justmd &'
 
 ```
 
