--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -18,6 +18,7 @@ tags:
 ## 环境变量
 
 ```bash
+
 # node env
 export PATH=$PATH:/opt/node/bin
 
@@ -71,6 +72,7 @@ alias justmd='cd /opt/justmd/ && ./justmd &'
 ### 常用工具
 
 ```bash
+sudo -- sh -c '
 sudo apt update
 sudo apt upgrade
 
@@ -101,6 +103,7 @@ sudo apt install -y deepin-screenshot;
 # 深度桌面取色器
 sudo apt install -y deepin-picker;
 sudo apt install -y deepin-terminal;
+'
 ```
 ### 实用工具
 **Visual Studio Code**
