--- a/source/_posts/2019-10-05-Docker笔记-安装配置.md
+++ b/source/_posts/2019-10-05-Docker笔记-安装配置.md
@@ -71,7 +71,7 @@ sudo yum-config-manager \
     https://download.docker.com/linux/centos/docker-ce.repo
 sudo yum install docker-ce docker-ce-cli containerd.io
 ```
-#### 将登陆用户添加到docker用户组
+#### 将非root登陆用户添加到docker用户组
 ```
 sudo gpasswd -a $USER docker
 newgrp docker
@@ -92,9 +92,12 @@ docker ps
 ### 增加到随机启动项
 `systemctl enbale docker `
 
+### 启动docker
+`service docker start`
+
 ### docker GUI
 1. kitematic
-2. 
+2. portainer 轻量级的Docker管理面板
 
 ### 安装docker-compose
 `pip3 install docker-compose`
