--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -76,6 +76,7 @@ sudo -- sh -c '
 sudo apt update
 sudo apt upgrade
 
+sudo apt install -y cmake;
 sudo apt install -y git;
 sudo apt install -y vim;
 sudo apt install -y htop;
