--- a/source/_posts/2014-09-10-Linux常用命令.md
+++ b/source/_posts/2014-09-10-Linux常用命令.md
@@ -38,11 +38,17 @@ free -m
 ```bash
 # 查看硬件设备
 lshw
+# PCI 设备列表
+lspci
+# 列出区块设备
+lsblk
+# 列出分区表
+fdisk -l
 
 ```
 
 
-## 传输篇 scp
+## 传输篇
 ```bash
 # 使用scp 传输文件 将本地文件data.zip 传到服务器 /data 目录 -
 # P ssh端口号
@@ -58,6 +64,9 @@ w | grep pts |wc -l
 
 # 文件批量重命名
 apt install rename 
+
+# 制作U盘启动盘（Centos7）
+pv -cN source < CentOS-7-x86_64-DVD-1804.iso | sudo dd of=/dev/sdc
 ```
 ### 选择时区 tzselect
 ```bash
