--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -106,6 +106,8 @@ sudo apt install -y deepin-screenshot;
 # 深度桌面取色器
 sudo apt install -y deepin-picker;
 sudo apt install -y deepin-terminal;
+# 通过管道监控数据进度
+sudo apt install -y pv;
 '
 ```
 ### 实用工具
