--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -135,6 +135,10 @@ sudo apt install -y pv;
 多功能下载器 
 特性： Async DNS BitTorrent Firefox3 Cookie GZip HTTPS Message Digest Metalink XML-RPC SFTP
 
+**balenaEtcher**
+  镜像写入工具
+  支持的映像格式包括：img、iso、zip、bz2、dsk、etch、gz、hddimg、raw、xz等；
+
 **永中Office**
 
 
