--- a/source/_posts/2016-09-03-Java学习笔记-基本程序设计结构.md
+++ b/source/_posts/2016-09-03-Java学习笔记-基本程序设计结构.md
@@ -236,9 +236,114 @@ int a = 2 * ++m; // m is 3, a is 6
 - 建议不在表达式中使用`++`，会让人迷惑。
  
 ### 关系和布尔运算符
-### 位运算符
+|符号|含义|举例|
+|-|-|-|
+|`==`|相等|
+|`!=`|不相等|
+|`<`|小于|
+|`>`|大于|
+|`<=`|小于等于|
+|`>=`|大于等于|
+|`&&`|逻辑与|
+|`||`|逻辑或|
+|`? :`|三元操作符| condition ? expression1 : expression2|
 
+ - `&&`与`||` 按照`短路`方式来求值
+
+
+### 位运算符
+|符号|含义|举例|
+|-|-|-|
+|`&`|and|
+|`|`| or |
+|`^`|xor|
+|`~`|not|
+|`>>`|左移|
+|`<<`|右移|
+
+ - `&`与`|` **不**按照`短路`方式来求值
+
+- 使用掩码技术可以得到整数中的各个位。
+```java
+	int n = 0b10000;
+	int fourthBitFromRight = (n & 0b1000) / 0b1000;  // 0
+
+    int n = 0b11000;
+	int fourthBitFromRight = (n & 0b1000) / 0b1000;  // 1
+
+    int n = 0b10000;
+	int fourthBitFromRight = (n & (1<<3)) >>3;  // 0
+
+    int n = 0b11000;
+	int fourthBitFromRight = (n & (1<<3)) >>3;  // 1
+```
+### 括号与运算符级别
+![括号与运算符级别](表6-7.jpg)
+
+### 枚举类型
+```java
+enum Size {SMALL, MEDIUM, LARGE, EXTRA_LARGE};
+Size s = Size.MEIUM;
+```
 ## 字符串
+- Java字符串就是Unicode字符序列。
+- JAVA没有内置的字符串类型，而是使用标准库中的一个预定义类。
+- 每个由双引号括起来的字符串都是String类的一个序列。
+
+```java
+String name = "Spaceack";
+```
+### 子串
+- 使用`substring`方法提取子串
+```java
+String name = "Spaceack";
+String subs = name.substring(0,5);  //"Space"
+
+- 子串长度 即 5-0 = 5
+
+```
+### 拼接
+- 使用`+`号 拼接两个字符串
+- 多个字符串使用某个定界符连接，可以使用`join`静态方法
+```java
+String all = String.join("-", "2016", "10", "01"); //2016-10-01
+```
+### 不可变字符串
+### 检测字符串相等
+不要使用`==` 检测字符串相等。
+
+使用`equals`方法`s.equals(t)`, 相等返回`true`, 否则返回`false`
+
+`equalsIgnoreCase`方法，不区分大小写。
+
+### 空串与Null串
+空串是长度为0的字符串。
+使用 `if (str.length() == 0)` 或 `str.equals("")`检测。
+
+使用`if (str == null)`检测Null串
+
+使用`if (str != null && str.length() != 0 )` 检测字符串既不是null, 也不为空串。
+### 码点与代码单元
+- `length`方法返回采用UTF-16编码表示的给定字符串所需要的代码单元数量
+    ```java
+    String name = "Spaceack👽";
+    int n = name.length();// 10
+    ``` 
+ - 获取实际长度，即码点数量，可调用：
+    ```java
+    int cpCount = name.codePointCount(0, name.length()); // 9
+    ```
+ - `s.charAt(n)` 返回位置n的代码单元，n介于0~`s.length() - 1` 之间
+    ```java
+    char first = name.charAt(0); // S
+    char last = name.charAt(9); // ?
+    ```
+- 得到第i个码点，可调用：
+    ```java
+    int i = 8;
+    int index = name.offsetByCodePoints(0, i);
+    int cp = name.codePointAt(index); // 8128125
+    ```
 ## 输入输出
 ## 控制流程
 ## 大数值
