--- a/source/_posts/2019-09-23-Nginx为多个不同的静态资源配置不同的二级域名.md
+++ b/source/_posts/2019-09-23-Nginx为多个不同的静态资源配置不同的二级域名.md
@@ -1,6 +1,6 @@
 ---
 title:  Nginx为多个不同的静态资源配置不同的二级域名
-author: 小丸子
+author: 小云吞
 date: 2019-09-23 21:00:00
 update:  2019-09-23 21:00:00
 categories: Nginx
