--- a/source/_posts/2014-09-10-Linux常用命令.md
+++ b/source/_posts/2014-09-10-Linux常用命令.md
@@ -49,14 +49,39 @@ fdisk -l
 
 
 ## 传输篇
-```bash
-# 使用scp 传输文件 将本地文件data.zip 传到服务器 /data 目录 -
-# P ssh端口号
-scp -P 22 /data/data.zip root@spaceack.com:/data
 
-# 使用scp 传输文件 将远程目录 remote_path 传到本地当前目录
-scp   remote_username@remote_ip:/remote_path/*  .
-```
+### scp
+
+  ```bash
+  # 使用scp 传输文件 将本地文件data.zip 传到服务器 /data 目录 -
+  # P ssh端口号
+  scp -P 22 /data/data.zip root@spaceack.com:/data
+
+  # 使用scp 传输文件 将远程目录 remote_path 传到本地当前目录
+  scp   remote_username@remote_ip:/remote_path/*  .
+  ```
+
+### 使用rsync断点续传备份包含大量数据的资源目录!
+
+  ```bash
+  rsync -vrtP --rsh='ssh -p 10050' root@66.6.66.666:/data/* /data/backup
+  ```
+
+  -v, --verbose 详细模式输出.
+
+  -r, --recursive 子目录递归处理.
+
+  -t, --times 保持文件时间信息.
+
+  -P,--partial 断点续传, --progress 显示传输过程.
+
+  --rsh=COMMAND 指定使用rsh、ssh方式进行数据同步, rsh为明文传输.
+
+  -u, 只进行更新，防止本地新文件被重写(不覆盖更新的文件).
+
+  --ignore-existing, 跳过接收端已存在的文件,目录增量备份会用到.
+
+
 ## 其它
 ```bash
 # 查看主机 ssh 连接数
