--- a/source/_posts/2019-11-22-使用Hexo构建静态博客站.md
+++ b/source/_posts/2019-11-22-使用Hexo构建静态博客站.md
@@ -3,9 +3,9 @@ title:  使用Hexo构建静态博客站
 date: 2019-11-22 21:00:00
 update: 2019-11-22 21:00:00
 author: 小云吞
-categories: Hexo
+categories: Blog
 tags: 
-  - 博客 
+  -  Hexo 
 ---
 
 ## Blog经历
