--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -46,6 +46,9 @@ export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
 export HBASE_HOME=/opt/hbase-2.1.1
 export PATH=$PATH:$HBASE_HOME/bin
 
+# mongodb
+export PATH=/opt/mongodb/bin:$PATH
+
 # RUST env
 export PATH="$HOME/.cargo/bin:$PATH"
 
@@ -56,6 +59,12 @@ export PATH=$PATH:$ANDROID_HOME/tools/bin
 export PATH=$PATH:$ANDROID_HOME/platform-tools
 export PATH=$PATH:$ANDROID_HOME/emulator
 
+# QT env
+export QTDIR=/opt/Qt/5.11.0/gcc_64/
+export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${QTDIR}/lib
+export PATH=${QTDIR}/bin:${PATH}
+
+alias postman='cd /opt/Postman/ && ./Postman'
 alias datagrip='/opt/Datagrip/bin/datagrip.sh'
 alias pycham='/opt/pycharm/bin/pycharm.sh'
 alias idea='/opt/idea/bin/idea.sh'
@@ -119,6 +128,15 @@ sudo apt install -y pv;
 **DBeaver**
   通用数据库管理
 
+**Peek**
+超级好用的屏幕GIF动画录制器
+
+```
+sudo add-apt-repository ppa:peek-developers/stable
+sudo apt-get update
+sudo apt-get install peek
+```
+
 **KRDC**  
   好用的远程桌面客户端
 
@@ -147,9 +165,9 @@ sudo apt install -y pv;
 **sonic-pi**  
   通过编码的音乐合成器
 
+**robo3t**
 
-
-
+**figlet**
 
 
 
