--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -95,9 +95,10 @@ sudo apt install -y tree;
 sudo apt install -y curl;
 sudo apt install -y aria2;
 sudo apt install -y whois;
-sudo apt install -y python3-distutils ;
+sudo apt install -y python3-distutils;
 sudo apt-get install -y libmysqlclient-dev;
 sudo apt install  -y python3-pip;
+sudo apt install -y zlib1g-dev;
 sudo apt install -y virtualenv;
 sudo apt install -y nginx;
 sudo apt install -y supervisor;
@@ -106,7 +107,7 @@ sudo apt install -y goldendict;
 # 文本版本差异对比，合并工具 可视化的diff和merge 工具
 sudo apt install -y meld;
 # 开源多媒体播放器， 感觉比VLC稳定。
-sudo apt install -y mplayer;
+sudo apt install -y smplayer;
 sudo apt install -y qbittorrent;
 # 密码管理器
 sudo apt install -y keepassxc;
@@ -118,6 +119,15 @@ sudo apt install -y deepin-terminal;
 # 通过管道监控数据进度
 sudo apt install -y pv;
 '
+```
+```bash
+# 检查是否存在SSH秘钥
+ls -al ~/.ssh
+# 生成ssh-key 密钥对
+ssh-keygen -t rsa -C "spaceack@qq.com"
+
+# 将SSH key添加到ssh-agent：
+ssh-add ~/.ssh/id_rsa
 ```
 ### 实用工具
 **Visual Studio Code**
@@ -157,6 +167,11 @@ sudo apt-get install peek
   镜像写入工具
   支持的映像格式包括：img、iso、zip、bz2、dsk、etch、gz、hddimg、raw、xz等；
 
+**calibre**
+  电子书管理工具
+  ```
+  sudo -v && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
+  ```
 **永中Office**
 
 
