--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -95,6 +95,7 @@ sudo apt install -y tree;
 sudo apt install -y curl;
 sudo apt install -y aria2;
 sudo apt install -y whois;
+sudo apt install -y lrzsz;
 sudo apt install -y python3-distutils;
 sudo apt-get install -y libmysqlclient-dev;
 sudo apt install  -y python3-pip;
@@ -118,6 +119,7 @@ sudo apt install -y deepin-picker;
 sudo apt install -y deepin-terminal;
 # 通过管道监控数据进度
 sudo apt install -y pv;
+sudo apt install -y neofetch;
 '
 ```
 ```bash
@@ -174,15 +176,17 @@ sudo apt-get install peek
   ```
 **永中Office**
 
+**robo3t**
 
 ### 趣味软件
 
 **sonic-pi**  
   通过编码的音乐合成器
 
-**robo3t**
-
 **figlet**
+
+**neofetch**
+![neofetch.png](neofetch.png)
 
 
 
