--- a/source/_posts/2020-07-21-Vim配置.md
+++ b/source/_posts/2020-07-21-Vim配置.md
@@ -10,8 +10,11 @@ tags:
 ---
 ## 介绍
 ### 安装Vundle插件管理器
-git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
-
+```
+git clone --depth=1 https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
+git clone --depth=1 https://github.com/preservim/nerdtree.git ~/.vim/bundle/nerdtree
+git clone --depth=1 https://github.com/Xuyuanp/nerdtree-git-plugin.git ~/.vim/bundle/nerdtree-git-plugin
+```
 # 更新配置文件
 
 vim ~/.vimrc
