--- a/source/_posts/2020-07-01-SSE协议.md
+++ b/source/_posts/2020-07-01-SSE协议.md
@@ -20,6 +20,7 @@ tags:
 5. 用来传送文本， 二进制需要编码。
 
 ## flask-sse 实现
+[flask-sse文档](https://flask-sse.readthedocs.io/)
 ### 前置条件
 1. 本地Redis服务器
 2. gunicorn gevent, sse是无限事件流，flask处理HTTP请求一次只能响应一个，要需要配合异步服务器使用。
