--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -30,6 +30,10 @@ CLASSPATH=.:$JAVA_HOME/lib.tools.jar
 PATH=$JAVA_HOME/bin:$PATH
 export JAVA_HOME CLASSPATH PATH
 
+# env jdk
+export PATH=$PATH:/usr/local/go/bin
+
+
 # redis env
 export REDIS_HOME=/opt/redis
 export PATH=$PATH:$REDIS_HOME/src
@@ -130,6 +134,17 @@ ssh-keygen -t rsa -C "spaceack@qq.com"
 
 # 将SSH key添加到ssh-agent：
 ssh-add ~/.ssh/id_rsa
+
+# 启用ssh
+sudo apt update
+sudo apt install openssh-server
+sudo systemctl status ssh
+# 禁用
+sudo systemctl disable --now ssh
+
+# 重启
+sudo systemctl enable --now ssh
+
 ```
 ### 实用工具
 **Visual Studio Code**
