--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -30,9 +30,8 @@ CLASSPATH=.:$JAVA_HOME/lib.tools.jar
 PATH=$JAVA_HOME/bin:$PATH
 export JAVA_HOME CLASSPATH PATH
 
-# env jdk
-export PATH=$PATH:/usr/local/go/bin
-
+# env golang
+export PATH=$PATH:/opt/go/bin
 
 # redis env
 export REDIS_HOME=/opt/redis
