--- a/source/_posts/2020-07-02-git常见问题处理.md
+++ b/source/_posts/2020-07-02-git常见问题处理.md
@@ -7,6 +7,12 @@ categories: Devops
 tags: 
   - git
 ---
+### 查看项目中某个人的代码数
+```
+git log --author="Spaceack" --pretty=tformat: --numstat | awk '{ add += $1; subs += $2; loc += $1 - $2 } END { printf "added lines: %s, removed lines: %s, total lines: %s\n", add, subs, loc }' 
+
+added lines: 1280, removed lines: 198, total lines: 1082
+```
 ### 您的分支和 'origin/master' 出现了偏离
 ```
 git status
