--- a/source/_posts/2020-08-01-Redis.md
+++ b/source/_posts/2020-08-01-Redis.md
@@ -3,8 +3,9 @@ title: Redis实战
 author: 小云吞
 date: 2020-08-01 21:00:00
 update:  2020-08-01 21:00:00
-categories: 算法
+categories: 数据库
 tags: 
+  - redis 
 ---
 ### 配置开机启动
 [转载： redis设置开机自启](https://www.cnblogs.com/116970u/p/10411370.html)
