--- a/source/_posts/2020-07-02-git常见问题处理.md
+++ b/source/_posts/2020-07-02-git常见问题处理.md
@@ -13,6 +13,16 @@ git log --author="Spaceack" --pretty=tformat: --numstat | awk '{ add += $1; subs
 
 added lines: 1280, removed lines: 198, total lines: 1082
 ```
+### 解决Git冲突 Please move or remove them before you can merge. Aborting
+
+```
+x  -----删除忽略文件已经对git来说不识别的文件
+d  -----删除未被添加到git的路径中的文件
+f  -----强制运行
+
+git clean  -d  -fx ""
+```
+
 ### 您的分支和 'origin/master' 出现了偏离
 ```
 git status
