--- a/source/_posts/2020-08-03-Mysql.md
+++ b/source/_posts/2020-08-03-Mysql.md
@@ -38,7 +38,11 @@ sudo kill -15
     ```
     CREATE USER spaceack IDENTIFIED BY 'password123';
     ```
-
+- 为用户授予数据库权限
+  ```
+  grant all privileges on `数据库名`.* to '用户名'@'localhost';
+  flush privileges;
+  ```
 ## 命令
 连接数据库管理系统
 mysql -u root -p -h localhost -P 3306
