--- a/source/_posts/2019-06-08-Python3编码转换.md
+++ b/source/_posts/2019-06-08-Python3编码转换.md
@@ -44,3 +44,16 @@ text = bytes.fromhex(hex_str).decode()
 # 我能吞下玻璃而不伤身体
 
 ```
+
+### ipv4字符串与数字转换
+  ```python3
+  import socket
+  import struct
+  ip = '127.0.0.1'
+  int_ip = struct.unpack('!I', socket.inet_aton(ip))[0]
+  print(int_ip)
+  str_ip = socket.inet_ntoa(struct.pack('!I', int_ip))
+  print(str_ip)
+  ```
+
+
