--- a/source/_posts/2020-07-17-Python使用os模块.md
+++ b/source/_posts/2020-07-17-Python使用os模块.md
@@ -61,6 +61,12 @@ if os.path.exists(old_file):
         os.rename(old_file, new_file)
 else:
     print("旧文件（名）不存在")
+# 文件目录遍历
+for dirpath, dirnames, filenames in os.walk(new_path):
+    print(dirpath)       # 当其目录绝对路径, 类似linux命令pwd的输出，str类型
+    print(dirnames)      # 当前目录下的子目录，list类型
+    print(filenames)     # 当前目录下的所有文件， list类型
+    
 
 # 删除目录
 os.rmdir(new_path)
