--- a/source/_posts/2020-07-19-Python时间处理.md
+++ b/source/_posts/2020-07-19-Python时间处理.md
@@ -11,7 +11,7 @@ tags:
 ---
 ## datetime 库
 ```python
-from datetime import datetime， timedelta
+from datetime import datetime, timedelta
 # 字符串 转 datetime类型
 another_day_str = '2020-07-18 21:00:00'
 another_day_datetime = datetime.strptime(another_day_str, '%Y-%m-%d %H:%M:%S')
