--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -164,6 +164,9 @@ sudo apt-get update
 sudo apt-get install peek
 ```
 
+**yEd**
+  绘制流程图[download](https://www.yworks.com/downloads#yEd)
+
 **KRDC**  
   好用的远程桌面客户端
 
