--- a/source/_posts/2020-08-10-Python数据结构与算法.md
+++ b/source/_posts/2020-08-10-Python数据结构与算法.md
@@ -40,4 +40,13 @@ python的`list`是可变线性表。
 ## 链接表
 ### 条件
 1. 能够找到表中的首元素。
-2. 从人一元素出发，可以找到下一个元素。
+2. 从任一元素出发，可以找到下一个元素。
+
+### 单链表
+- 定义
+```python
+class LNode:
+    def __init__(self, elem, next_= None):
+        self.elem = elem
+        self.next = next_
+```
