--- a/source/_posts/2020-08-27-leetcode-1-两数之和.md
+++ b/source/_posts/2020-08-27-leetcode-1-两数之和.md
@@ -21,6 +21,9 @@ tags:
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
 ```
+来源：力扣（LeetCode）
+    链接：https://leetcode-cn.com/problems/robot-return-to-origin
+    
 ---
 看着题目看似还是很简单， 暴力模拟用二次循环就能做出来。 时间复杂度：O(n^2), 空间复杂度：O(1)
 
