上传人：李云通，内容: update

--- a/source/_posts/2019-10-05-Docker笔记-安装配置.md
+++ b/source/_posts/2019-10-05-Docker笔记-安装配置.md
@@ -83,10 +83,9 @@ docker ps
 
 */etc/docker/daemon.json（Linux）*
 ```
-"registry-mirrors": [
-"https://registry.docker-cn.com",
-"https://docker.mirrors.ustc.edu.cn"
-]
+{
+  "registry-mirrors": ["https://registry.docker-cn.com", "https://docker.mirrors.ustc.edu.cn"]
+}
 ```
 `sudo systemctl restart docker` 重启生效
 ### 增加到随机启动项
