--- a/source/_posts/2020-08-27-leetcode-1-两数之和.md
+++ b/source/_posts/2020-08-27-leetcode-1-两数之和.md
@@ -63,7 +63,7 @@ tags:
                     return [index, nums.index(flag)]
     ```
 
-    但是没考虑到减数和差为相同值的情况。在这个 `nums = [3,2,4] target = 6` 用例载倒了。即：要注意目标元素`target - item` 的值不能是`nums[index]`本身。在检测时打个屏蔽补丁就好了，见`题解2-1`。
+    但是没考虑到减数和差为相同值的情况。在这个 `nums = [3,2,4] target = 6` 用例上栽倒了。即：要注意目标元素`target - item` 的值不能是`nums[index]`本身。在检测时打个屏蔽补丁就好了，见`题解2-1`。
 
 - 题解2-1:
 
