--- a/source/_posts/2020-08-28-leetcode-657-机器人能否返回原点.md
+++ b/source/_posts/2020-08-28-leetcode-657-机器人能否返回原点.md
@@ -1,5 +1,5 @@
 ---
-title: leetcode-657-机器人能否返回原点.
+title: leetcode-657-机器人能否返回原点
 author: 小云吞
 date: 2020-08-28 21:00:00
 update:  2020-08-28 21:00:00
