--- a/source/_posts/2020-08-30-leetcode-557-反转字符串中的单词 III.md
+++ b/source/_posts/2020-08-30-leetcode-557-反转字符串中的单词 III.md
@@ -34,17 +34,9 @@ tags:
 打卡水题, 很简单的字符串操作题.
 - 题解:
 
-    执行用时：
-    60 ms
-    , 在所有 Python3 提交中击败了
-    27.70%
-    的用户
+    执行用时：60 ms, 在所有 Python3 提交中击败了27.70%的用户
     
-    内存消耗：
-14.1 MB
-, 在所有 Python3 提交中击败了
-64.75%
-的用户
+    内存消耗：14.1 MB, 在所有 Python3 提交中击败了64.75%的用户
 
     ```python
     class Solution:
