--- a/source/_posts/2020-08-28-leetcode-657-机器人能否返回原点.md
+++ b/source/_posts/2020-08-28-leetcode-657-机器人能否返回原点.md
@@ -42,17 +42,9 @@ tags:
 打卡水题, 很简单的模拟题.
 - 题解1:
 
-    执行用时：
-96 ms
-, 在所有 Python3 提交中击败了
-13.82%
-的用户
+    执行用时：96 ms, 在所有 Python3 提交中击败了13.82%的用户
 
-    内存消耗：
-13.8 MB
-, 在所有 Python3 提交中击败了
-49.28%
-的用户
+    内存消耗：13.8 MB, 在所有 Python3 提交中击败了49.28%的用户
 
     ```python
     class Solution:
