--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -94,6 +94,7 @@ sudo apt install -y cmake;
 sudo apt install -y git;
 sudo apt install -y vim;
 sudo apt install -y htop;
+sudo apt install -y glances;
 sudo apt install -y tree;
 sudo apt install -y curl;
 sudo apt install -y aria2;
