--- a/source/_posts/2014-09-10-Linux常用命令.md
+++ b/source/_posts/2014-09-10-Linux常用命令.md
@@ -11,11 +11,23 @@ tags:
 ---
 
 ##  系统篇
+```
+# 查看LBS 发行版本
+cat /etc/lsb-release
+```
+```
+DISTRIB_ID=Ubuntu
+DISTRIB_RELEASE=18.04
+DISTRIB_CODENAME=bionic
+DISTRIB_DESCRIPTION="Ubuntu 18.04.5 LTS"
+
+```
 ### CPU
 ```bash
 lscpu
 cat /proc/cpuinfo
-
+# 查看CPU架构
+uname -a | awk '{print $12}'
 ```
 ### 内存
 
@@ -46,8 +58,17 @@ lsblk
 fdisk -l
 
 ```
+### 网络
+```bash
+# 改ip
+sudo ifconfig down
+sudo ifconfig eth0 192.168.0.200 netmask 255.255.255.0 up
+# 免sudo密码交互
+echo 'password' | sudo -S ifconfig eth0 192.168.0.200 netmask 255.255.255.0 up
+sudo /etc/init.d/networking restart
 
 
+```
 ## 传输篇
 
 ### scp
