--- a/source/_posts/2019-06-19-算法标签.md
+++ b/source/_posts/2019-06-19-算法标签.md
@@ -7,14 +7,28 @@ categories: 算法
 tags: 
   - 算法
 ---
+- 数据结构
+  - 数组 Array
+  - 栈 Stack
+  - 队列 Queue
+  - 优先队列（Priority Queue, heap）
+  - 链表 LinkedList(single/double)
+  - Tree/ Binary Tree
+  - Binary Search Tree
+  - HashTable
+  - Disjoint Set
+  - Trie
+  - BloomFliter
+  - LRU Cache
 
 - 算法分类
   - 线性结构
-    - 莫队
+    - 莫队  (Mo's Algorithm)
     - 前缀和
     - 基本数组
     - 向量
-    - 栈
+    - 链接表（linked list）
+    - 栈(stack)
     - 队列
     - 块状链表,块状数组,分块
     - st表, 稀疏表
@@ -33,7 +47,7 @@ tags:
       - Splay
       - 静态排序树
       - 替罪羊树
-    - 二插堆
+    - 二叉堆（binary heap）
       - 左偏树
       - 斜堆
       - 二项堆
@@ -48,7 +62,7 @@ tags:
       - 树链部分,树剖
       - Link-Cut Tree,LCT
     - 树的应用
-      - 并查集
+      - 并查集 (Disjoint set)
       - 树的遍历
       - 哈夫曼树
       - RMQ
@@ -124,13 +138,13 @@ tags:
       - 最小费用可行流
   - 基础算法
     - 模拟
-    - 贪心
+    - 贪心(Greedy)
     - 递推
-    - 递归
+    - 递归（backtrace）
     - 枚举, 暴力
-    - 分治
+    - 分治（Divide and conquer）
    
-  - 动态规划
+  - 动态规划(Dynamic Programming)
     - 动态规划初步
     - 背包
     - 环形动规,环形dp
@@ -141,7 +155,7 @@ tags:
     - 动态规划优化
       - 单调队列
       - 降低维度,降维
-      - 优先队列
+      - 优先队列(Priority Queue)
       - 矩阵加速,矩阵优化
       - 斜率优化
       - 状态压缩,状压
