--- a/source/_posts/2020-09-07-leetcode-347-前K个高频元素.md
+++ b/source/_posts/2020-09-07-leetcode-347-前K个高频元素.md
@@ -52,7 +52,7 @@ tags:
     1. python对字典的操作要熟练.
     2. 基本思路是先把元素和元素个数存入字典, 然后反转key-value.
     3. 因为value 有重复的情况, 所以把重复对应的key以List形式作为值.
-    4. 再次就是对字典按键排序, 值列表合并, 列表平坦化.
+    4. 再次就是对字典按键排序, 值列表合并, 列表二维转一维.
 
 - 题解1:
 
