--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -110,10 +110,13 @@ sudo apt install -y nginx;
 sudo apt install -y supervisor;
 # 功能强大的词典， 需要配置第三方词典资源
 sudo apt install -y goldendict;
+sudo apt install pandoc;
 # 文本版本差异对比，合并工具 可视化的diff和merge 工具
 sudo apt install -y meld;
 # 远程桌面客户端
 sudo apt install -y remmina;
+# VCN 客户端
+sudo apt install -y krdc;
 # 开源多媒体播放器， 感觉比VLC稳定。
 sudo apt install -y smplayer;
 sudo apt install -y qbittorrent;
