--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -99,6 +99,7 @@ sudo apt install -y tree;
 sudo apt install -y curl;
 sudo apt install -y aria2;
 sudo apt install -y whois;
+sudo apt install -y unrar;
 sudo apt install -y lrzsz;
 sudo apt install -y synaptic;
 sudo apt install -y python3-distutils;
