--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -24,6 +24,9 @@ tags:
 # node env
 export PATH=$PATH:/opt/node/bin
 
+# npm global env 
+export PATH=~/.npm-global/bin:$PATH
+
 # env jdk
 JAVA_HOME=/opt/jdk
 CLASSPATH=.:$JAVA_HOME/lib.tools.jar
@@ -153,6 +156,15 @@ sudo systemctl disable --now ssh
 sudo systemctl enable --now ssh
 
 ```
+
+- npm非root全局安装权限
+  ```
+  mkdir ~/.npm-global
+  npm config set prefix '~/.npm-global'
+  # .bashrc 加入 export PATH=~/.npm-global/bin:$PATH
+  source .bashrc
+  ```
+
 ### 实用工具
 **Visual Studio Code**
 
@@ -212,7 +224,4 @@ sudo apt-get install peek
 
 **neofetch**
 ![neofetch.png](neofetch.png)
-
-
-
 
