--- a/source/_posts/2014-09-10-Linux常用命令.md
+++ b/source/_posts/2014-09-10-Linux常用命令.md
@@ -9,7 +9,6 @@ tags:
   - tools
   - 配置 
 ---
-
 ##  系统篇
 ```
 # 查看LBS 发行版本
@@ -22,6 +21,18 @@ DISTRIB_CODENAME=bionic
 DISTRIB_DESCRIPTION="Ubuntu 18.04.5 LTS"
 
 ```
+```bash
+# 查看系统有哪些shell
+cat /etc/shell
+# 创建用户spaceack; 生成home目录 /home/spaceack ; 指定默认使用zsh
+sudo adduser --home /home/spaceack --shell /usr/bin/zsh spaceack
+# 用户给予sudo权限, 直接加入sudo组
+sudo usermod -aG sudo spaceack
+# 其它实现方法
+sudo useradd -d /home/spaceack -s /bash/zsh spaceack
+
+```
+
 ### CPU
 ```bash
 lscpu
