--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -112,6 +112,8 @@ sudo apt install -y zlib1g-dev;
 sudo apt install -y virtualenv;
 sudo apt install -y nginx;
 sudo apt install -y supervisor;
+# rime輸入法
+sudo apt-get install ibus-rime
 # 功能强大的词典， 需要配置第三方词典资源
 sudo apt install -y goldendict;
 sudo apt install pandoc;
@@ -166,6 +168,16 @@ sudo systemctl enable --now ssh
   ```
 
 ### 实用工具
+**rime输入法**
+
+`F4` 切换输入方案
+
+```bash
+sudo apt-get install ibus-rime
+ibus restart
+ibus engine rime
+```
+
 **Visual Studio Code**
 
 **CherryTree**
