--- a/source/_posts/2020-09-16-蓝桥楼赛第9期-修复未正确实现的实验类.md
+++ b/source/_posts/2020-09-16-蓝桥楼赛第9期-修复未正确实现的实验类.md
@@ -72,8 +72,21 @@ class Lab(object):
 ---
 
 - 解题思路
-    待续
+    
+    - 初始化函数：
 
+        传值：被调函数局部变量改变不会影响主调函数局部变量
+
+        传址：被调函数局部变量改变会影响主调函数局部变量
+
+        传值就是传入一个参数的值，传址就是传入一个参数的地址，也就是内存的地址（相当于指针）
+        
+        Python参数传递方式：传递对象引用（传值和传址的混合方式），如果是数字，字符串，元组则传值；如果是列表，字典则传址；
+
+        copy使用场景：列表或字典，且内部元素为数字，字符串或元组
+
+        deepcopy使用场景：列表或字典，且内部元素包含列表或字典
+        
 - 题解1:
 
     ```python
