--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -112,6 +112,7 @@ sudo apt install -y zlib1g-dev;
 sudo apt install -y virtualenv;
 sudo apt install -y nginx;
 sudo apt install -y supervisor;
+sudo apt install -y nmap;
 # rime輸入法
 sudo apt-get install ibus-rime
 # 功能强大的词典， 需要配置第三方词典资源
@@ -185,6 +186,15 @@ ibus engine rime
 
 **DBeaver**
   通用数据库管理
+
+**OBS(Open Broadcaster Software)**
+开源视频录制与直播软件
+```
+sudo apt install ffmpeg
+sudo add-apt-repository ppa:obsproject/obs-studio
+sudo apt update
+sudo apt install obs-studio
+```
 
 **Peek**
 超级好用的屏幕GIF动画录制器
