--- a/source/_posts/2020-09-27-leetcode-461-汉明距离.md
+++ b/source/_posts/2020-09-27-leetcode-461-汉明距离.md
@@ -86,16 +86,14 @@ tags:
 
 - 题解3：
 
-    # 偶数位为0，奇数位为1
+    -  偶数位为0，奇数位为1
     0x55555555 = 0b1010101010101010101010101010101  
 
-    # 1和0每隔两位交替出现
+    -  1和0每隔两位交替出现
     0x33333333 = 0b110011001100110011001100110011
 
-    # 1和0每隔两位交替出现
     0x0f0f0f0f = 0b1111000011110000111100001111
 
-    # 1和0每隔两位交替出现
     0x00ff00ff = 0b111111110000000011111111
 
     # 1和0每隔两位交替出现
