--- a/source/_posts/2020-07-02-git常见问题处理.md
+++ b/source/_posts/2020-07-02-git常见问题处理.md
@@ -73,3 +73,23 @@ tags:
   git pull
   git stash pop
   ```
+
+## GitHub
+
+### 更新 fork 分支
+
+  ```
+  # RP: spaceack/awesomeproject
+  # Fork: xxxx/awesomeproject
+
+  git clone https://github.com/spaceack/awesomeproject.git
+  cd awesomeproject
+  git remote add upstream https://github.com/spaceack/myframework.git
+
+  # Update:
+  git fetch upstream
+  git rebase upstream/master
+
+  git push
+  git push --tags
+  ```
