--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -184,8 +184,19 @@ ibus engine rime
 **CherryTree**
   功能强大的树形笔记工具
 
+**VNote**
+  功能强大的 Vim 和 MarkDown 笔记工具
+
 **DBeaver**
   通用数据库管理
+
+**Zeal**
+  (离线文档浏览器)[https://zealdocs.org/]
+  ```
+  sudo add-apt-repository ppa:zeal-developers/ppa
+  sudo apt-get update
+  sudo apt-get install zeal
+  ```
 
 **OBS(Open Broadcaster Software)**
 开源视频录制与直播软件
@@ -237,6 +248,9 @@ sudo apt-get install peek
 
 **robo3t**
 
+**OmegaT**
+[开源计算机辅助翻译软件](https://omegat.org/)
+
 ### 趣味软件
 
 **sonic-pi**  
@@ -246,4 +260,3 @@ sudo apt-get install peek
 
 **neofetch**
 ![neofetch.png](neofetch.png)
-
