--- a/source/_posts/2020-07-02-git常见问题处理.md
+++ b/source/_posts/2020-07-02-git常见问题处理.md
@@ -79,14 +79,14 @@ tags:
 ### 更新 fork 分支
 
   ```
-  # RP: spaceack/awesomeproject
-  # Fork: xxxx/awesomeproject
+ - RP: spaceack/awesomeproject
+ - Fork: xxxx/awesomeproject
 
   git clone https://github.com/spaceack/awesomeproject.git
   cd awesomeproject
   git remote add upstream https://github.com/spaceack/myframework.git
 
-  # Update:
+- Update:
   git fetch upstream
   git rebase upstream/master
 
