--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -192,6 +192,10 @@ ibus engine rime
 **DBeaver**
   通用数据库管理
 
+**RDM**
+  开源 Redis ® 管理工具
+  `sudo snap install redis-desktop-manager`
+
 **Zeal**
   (离线文档浏览器)[https://zealdocs.org/]
   ```
@@ -252,6 +256,14 @@ sudo apt-get install peek
 
 **OmegaT**
 [开源计算机辅助翻译软件](https://omegat.org/)
+
+**linux 字符终端 tty下显示中文**
+
+```bash
+sudo apt-get install fbterm -y
+sudo gpasswd -a $USER video 
+sudo chmod u+s /usr/bin/fbterm 
+```
 
 ### 趣味软件
 
