--- a/source/_posts/2020-08-01-Redis.md
+++ b/source/_posts/2020-08-01-Redis.md
@@ -54,6 +54,15 @@ systemctl status redis.service
 # 查看redis 是否启动成功
 netstat -lntp | grep 6379
 ```
+## 命令速查
+
+1. 查看数据库数量
+`CONFIG GET databases`
+
+2. 选择数据库
+`SELECT 1`
+
+3. 
 
 ## 数据结构
 value 的五种结构 
