--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -137,6 +137,8 @@ sudo apt install -y deepin-terminal;
 # 通过管道监控数据进度
 sudo apt install -y pv;
 sudo apt install -y neofetch;
+# 番茄时钟
+sudo apt install gnome-shell-pomodoro;
 # 时钟显示秒，设置。
 sudo apt-get install -y gnome-tweaks;
 '
