--- a/source/_posts/2020-11-13-VScode常用插件及配置.md
+++ b/source/_posts/2020-11-13-VScode常用插件及配置.md
@@ -28,3 +28,6 @@ tags:
   5. **ctrl+shift+p**, 使用命令 `remote-browser:Connect` 链接远程。
   6. VScode右下角将提示已远程登录成功，`remote-browser:Connected`
   7. 文件浏览界面 `REMOTE BROWSER` 查看远程目录文件。
+
+### 浏览pdf
+1. 安装插件 `vscode-pdf`
