--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -141,6 +141,7 @@ sudo apt install -y neofetch;
 sudo apt install gnome-shell-pomodoro;
 # 时钟显示秒，设置。
 sudo apt-get install -y gnome-tweaks;
+sudo pip3 install jupyterlab;
 '
 ```
 ```bash
