--- a/source/_posts/2020-09-04-leetcode-414-第三大的数.md
+++ b/source/_posts/2020-09-04-leetcode-414-第三大的数.md
@@ -46,16 +46,17 @@ tags:
     ```
 
     来源：力扣（LeetCode）
-    链接：https://leetcode-cn.com/problems/robot-return-to-origin
+    链接：https://leetcode-cn.com/problems/third-maximum-number/
     
 
 ---
 - 解题思路
 
-    首先用苯办法，定义一个最大长度为三的有序列表，依次从nums列表中取值，插入该有序列表。
+  `题解1` 首先用苯办法，定义一个最大长度为三的有序列表，依次从 nums 列表中取值，插入该有序列表。
 
     优点是节约内存， 缺点是判断比较麻烦。
-
+    
+  `题解2` 超级简洁，执行速度快。利用 python 的 `heapq` 模块的 `nlargest()` 方法。它会查找最大的n个数， 本质是堆排序。所以输出结果是无序的， 要再用 `sort` 进行排序。 
 
 - 题解1:
 
@@ -106,3 +107,14 @@ tags:
                     # 这里需要注意， 第一次提交下标写的是2，没有考虑到1的情况，要用反向索引-1
             return th[-1] if len(th) < 3 else th[0]
     ```
+- 题解2
+ 执行用时：32 ms, 在所有 Python3 提交中击败了99.17%的用户
+ 内存消耗：15.9 MB, 在所有 Python3 提交中击败了16.91%的用户
+	```python
+	import heapq
+	class Solution:
+	    def thirdMax(self, nums: List[int]) -> int:
+	        tmp = heapq.nlargest(3, set(nums))
+	        tmp.sort(reverse=True)
+	        return tmp[0] if len(tmp) < 3 else tmp[2]
+	```
