--- a/source/_posts/2016-09-03-Java学习笔记-基本程序设计结构.md
+++ b/source/_posts/2016-09-03-Java学习笔记-基本程序设计结构.md
@@ -2,7 +2,7 @@
 title: Java学习笔记-基本程序设计结构
 date: 2016-09-03 12:00:00
 update: 2020-02-14 23:00:00
-author: 小云吞
+author: Spaceack
 categories: Java
 tags: 
   - Java
