--- a/source/_posts/2017-07-28-2017计蒜之道初赛第一场阿里的新游戏题解.md
+++ b/source/_posts/2017-07-28-2017计蒜之道初赛第一场阿里的新游戏题解.md
@@ -2,7 +2,7 @@
 title: 2017 计蒜之道 初赛 第一场 阿里的新游戏 题解
 date: 2017-06-19 12:00:00
 update: 2017-06-19 23:00:00
-author: 小云吞
+author: Spaceack
 categories: 算法
 tags: 
   - 算法
