--- a/source/_posts/2017-08-02-火车票中的社会工程学信息.md
+++ b/source/_posts/2017-08-02-火车票中的社会工程学信息.md
@@ -2,7 +2,7 @@
 title: 火车票中的社会工程学信息
 date: 2017-08-01 19:45:15
 update:  2017-08-01 19:45:15
-author: 小云吞
+author: Spaceack
 categories: 网络安全
 tags: 
   - 社会工程学
