--- a/source/_posts/2017-08-23-基于相同颜色连通像素个数的统计进行图像字符识别.md
+++ b/source/_posts/2017-08-23-基于相同颜色连通像素个数的统计进行图像字符识别.md
@@ -2,7 +2,7 @@
 title: 基于相同颜色连通像素个数的统计进行图像字符识别
 date: 2017-08-23 12:00:00
 update: 2017-08-23 12:00:00
-author: 小云吞
+author: Spaceack
 categories: 算法
 tags: 
   - 图像识别
