--- a/source/_posts/2017-10-13-微信小程序开发笔记.md
+++ b/source/_posts/2017-10-13-微信小程序开发笔记.md
@@ -2,7 +2,7 @@
 title: 微信小程序开发笔记
 date: 2017-10-13 12:45:39
 update: 2017-10-25 10:45:24
-author: 小云吞
+author: Spaceack
 categories: 微信小程序
 tags: 
   - 微信小程序
