--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -1,6 +1,6 @@
 ---
 title: Ubuntu20.04配置笔记
-author: 小云吞
+author: Spaceack
 date: 2020-05-01 21:00:00
 update:  2020-05-01 21:00:00
 categories: Linux
