--- a/source/_posts/2020-07-17-Python使用os模块.md
+++ b/source/_posts/2020-07-17-Python使用os模块.md
@@ -1,6 +1,6 @@
 ---
 title: Python使用os模块
-author: 小云吞
+author: Spaceack
 date: 2020-07-17 21:00:00
 update:  2020-07-17 21:00:00
 categories: Python
