--- a/source/_posts/2020-07-20-为debian10添加软件源.md
+++ b/source/_posts/2020-07-20-为debian10添加软件源.md
@@ -1,6 +1,6 @@
 ---
 title: 为debian10添加软件源
-author: 小云吞
+author: Spaceack
 date: 2020-07-20 21:00:00
 update:  2020-07-20 21:00:00
 categories: Linux
