--- a/source/_posts/2020-08-31-leetcode-841-钥匙和房间.md
+++ b/source/_posts/2020-08-31-leetcode-841-钥匙和房间.md
@@ -1,6 +1,6 @@
 ---
 title: leetcode-841-钥匙和房间
-author: 小云吞
+author: Spaceack
 date: 2020-08-31 21:00:00
 update:  2020-08-31 21:00:00
 categories: 算法
