--- a/source/_posts/2020-09-04-leetcode-414-第三大的数.md
+++ b/source/_posts/2020-09-04-leetcode-414-第三大的数.md
@@ -1,6 +1,6 @@
 ---
 title: leetcode-414-第三大的数
-author: 小云吞
+author: Spaceack
 date: 2020-09-04 21:00:00
 update: 2020-09-04 21:00:00
 categories: 算法
