--- a/source/_posts/2020-09-15-蓝桥楼赛第23期-解析用户名字符串.md
+++ b/source/_posts/2020-09-15-蓝桥楼赛第23期-解析用户名字符串.md
@@ -1,6 +1,6 @@
 ---
 title: 蓝桥楼赛第23期-解析用户名字符串
-author: 小云吞
+author: Spaceack
 date: 2020-09-15 21:00:00
 update: 2020-09-15 21:00:00
 categories: 算法
