--- a/source/_posts/2020-09-16-蓝桥楼赛第9期-修复未正确实现的实验类.md
+++ b/source/_posts/2020-09-16-蓝桥楼赛第9期-修复未正确实现的实验类.md
@@ -1,6 +1,6 @@
 ---
 title: 蓝桥楼赛第9期-修复未正确实现的实验类
-author: 小云吞
+author: Spaceack
 date: 2020-09-16 21:00:00
 update: 2020-09-16 21:00:00
 categories: Python
