--- a/source/_posts/2020-09-17-蓝桥楼赛第23期-工作文件整理归类.md
+++ b/source/_posts/2020-09-17-蓝桥楼赛第23期-工作文件整理归类.md
@@ -1,6 +1,6 @@
 ---
 title: 蓝桥楼赛第23期-工作文件整理归类
-author: 小云吞
+author: Spaceack
 date: 2020-09-17 21:00:00
 update: 2020-09-17 21:00:00
 categories: Python
