--- a/source/_posts/2021-01-30-leetcode-1046-最后一块石头的重量.md
+++ b/source/_posts/2021-01-30-leetcode-1046-最后一块石头的重量.md
@@ -1,6 +1,6 @@
 ---
 title: leetcode-1046-最后一块石头的重量 题解
-author: 小云吞
+author: Spaceack
 date: 2021-01-30 21:00:00
 update: 2021-01-30 21:00:00
 categories: 算法
