--- a/source/_posts/2020-09-03-leetcode-495-提莫攻击.md
+++ b/source/_posts/2020-09-03-leetcode-495-提莫攻击.md
@@ -1,6 +1,6 @@
 ---
 title: leetcode-495-提莫攻击
-author: 小云吞
+author: Spaceack
 date: 2020-09-03 21:00:00
 update: 2020-09-03 21:00:00
 categories: 算法
