--- a/source/_posts/2020-09-20-蓝桥楼赛第23期-新冠疫情数据统计.md
+++ b/source/_posts/2020-09-20-蓝桥楼赛第23期-新冠疫情数据统计.md
@@ -1,6 +1,6 @@
 ---
 title: 解决VScode 与 Linux Rime 中州韵输入法 CTRL+~ 热键冲突
-author: 小云吞
+author: Spaceack
 date: 2020-09-20 21:00:00
 update: 2020-09-20 21:00:00
 categories: Python
