--- a/source/_posts/2020-09-27-leetcode-461-汉明距离.md
+++ b/source/_posts/2020-09-27-leetcode-461-汉明距离.md
@@ -1,6 +1,6 @@
 ---
 title: leetcode-461-汉明距离
-author: 小云吞
+author: Spaceack
 date: 2020-09-27 21:00:00
 update: 2020-09-27 21:00:00
 categories: 算法
