--- a/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
+++ b/source/_posts/2020-05-01-Ubuntu20.04配置笔记.md
@@ -20,6 +20,9 @@ tags:
 ## 环境变量
 
 ```bash
+# HISTORY
+export HISTTIMEFORMAT="%Y-%m-%d %H:%M:%S "
+export HISTFILESIZE=99999
 
 # node env
 export PATH=$PATH:/opt/node/bin
