--- a/source/_posts/2014-09-10-Linux常用命令.md
+++ b/source/_posts/2014-09-10-Linux常用命令.md
@@ -56,6 +56,18 @@ sudo dmidecode | grep -A16 "Memory Device"|grep 'Speed'
 # -h 以 Gibibytes为单位查看.
 free -m
 
+# 查看交换分区
+sudo swapon --show
+
+NAME      TYPE      SIZE USED PRIO
+/dev/sda5 partition 3.5G 2.1G   -2
+
+# 关闭交换分区， 交换分区的数据会转移到内存。需确保内存有足够空间。
+sudo swapoff /dev/sda5
+
+# 重新开启交换分区
+sudo swapon /dev/sda5
+
 ```
 ### 硬件设备
 ```bash
