--- a/source/_posts/2019-06-08-Python3编码转换.md
+++ b/source/_posts/2019-06-08-Python3编码转换.md
@@ -25,6 +25,11 @@ base64_string = base64.b64encode(input_text.encode('utf-8')).decode('utf-8')
 # base64 to string
 output_text = base64.b64decode(base64_string).decode(encoding='utf8')
 # 我能吞下玻璃而不伤身体
+>>> base64.b64encode(b'Spaceack')
+b'U3BhY2VhY2s='
+
+>>> base64.b64decode(b'U3BhY2VhY2s=').decode("utf-8")
+'Spaceack'
 
 # URL Decode quote/unquote
 import urllib.parse
