--- a/source/_posts/2020-08-03-Mysql.md
+++ b/source/_posts/2020-08-03-Mysql.md
@@ -688,6 +688,16 @@ SHOW STATUS;
 TABLE 来复原。
 
 ### 示例
+
+#### 备份数据库
+```
+/usr/bin/mysqldump --routines -h127.0.0.1 -uroot -ppassword --add-drop-table --disable-keys --extended-insert --single-transaction database_name > database_name_date.sql
+```
+#### 恢复备份
+```
+mysql -uroot -ppassword -Ddatabase_name < database_name_date.sql
+```
+
 #### 备份包含 blob 类型字段的表
 需要添加 --hex-blob 参数
 ```bash
