--- a/source/_posts/2020-11-18-Postman使用技巧.md
+++ b/source/_posts/2020-11-18-Postman使用技巧.md
@@ -40,6 +40,7 @@ tags:
   ```
 4. 动态变化的时间参数变量，可在 **Pre-request Script** 中设置全局变量，再由 **Body** 使用。
 
+  实现1:
   ```javascript
   pm.globals.unset("now");
   var myDate=new Date();
@@ -56,3 +57,11 @@ tags:
   postman.setGlobalVariable("now", date);
   // now值： 2020-11-18 21:00:00
   ```
+
+  实现2:
+  ```javascript
+  var moment = require("moment");
+  var delivery_time = moment().utcOffset(8).format("YYYY-MM-DD HH:mm:ss");
+  pm.environment.set("delivery_time", delivery_time);
+  ```
+5. 数据库
